fixing spacing and color

--- a/app/assets/stylesheets/events.scss
+++ b/app/assets/stylesheets/events.scss
@@ -7,6 +7,8 @@
 .shows {
   margin-top: 2em;
   font-size: .9em;
+  color: white;
+  background-color: $gray-light;
 }
 
 .show-title {
