--- a/app/assets/stylesheets/music.scss
+++ b/app/assets/stylesheets/music.scss
@@ -8,7 +8,6 @@
 .music {
   margin-top: 5em;
   margin-bottom: 5em;
-
 }
 
 .music-container {
@@ -24,5 +23,6 @@
 
 .music-cta {
   margin-top: 2em;
+  color: $gray-light;
 }
 // our music ===========end====================
